--- a/app/src/main/res/layout/activity_manual_connect.xml
+++ b/app/src/main/res/layout/activity_manual_connect.xml
@@ -26,7 +26,7 @@
         layout="@layout/toolbar" />
 
     <EditText
-        android:id="@+id/ipaddr"
+        android:id="@+id/ipaddress"
         android:layout_width="408dp"
         android:layout_height="63dp"
         android:ems="10"
