--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -15,47 +15,50 @@
 
     <ImageButton
         android:id="@+id/presentation"
-        android:layout_width="358dp"
-        android:layout_height="169dp"
+        android:layout_width="356dp"
+        android:layout_height="141dp"
         android:background="@drawable/round_button"
         android:contentDescription="@string/screen_share"
         android:elevation="@dimen/cardview_compat_inset_shadow"
+        android:foregroundGravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.563"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrnshare"
-        app:layout_constraintVertical_bias="0.339"
+        app:layout_constraintVertical_bias="0.036"
         app:srcCompat="@drawable/scrnlogo" />
 
     <ImageButton
         android:id="@+id/scrnshare"
-        android:layout_width="358dp"
-        android:layout_height="169dp"
+        android:layout_width="354dp"
+        android:layout_height="137dp"
         android:background="@drawable/round_button"
         android:contentDescription="@string/screen_share"
         android:elevation="@dimen/cardview_compat_inset_shadow"
+        android:foregroundGravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.476"
+        app:layout_constraintVertical_bias="0.398"
         app:srcCompat="@drawable/scrnlogo" />
 
     <ImageButton
         android:id="@+id/mouse"
-        android:layout_width="358dp"
-        android:layout_height="169dp"
+        android:layout_width="354dp"
+        android:layout_height="140dp"
         android:background="@drawable/round_button"
         android:contentDescription="@string/mouse_move"
         android:elevation="@dimen/cardview_compat_inset_shadow"
+        android:foregroundGravity="center_horizontal"
         app:layout_constraintBottom_toTopOf="@+id/scrnshare"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.687"
+        app:layout_constraintVertical_bias="0.9"
         app:srcCompat="@drawable/mouseicon" />
 
 
