--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -1,10 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
     tools:context=".Presentation">
+
+    <include
+        android:id="@+id/toolbar3"
+        layout="@layout/toolbar" />
+
+    <TextView
+        android:id="@+id/text_view_countdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="481dp"
+        android:text="00:00"
+        android:textColor="@color/black"
+        android:textSize="60sp" />
+
+    <Button
+        android:id="@+id/button_reset"
+        android:layout_width="63dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="176dp"
+        android:layout_marginBottom="403dp"
+        android:contentDescription="reset"
+        android:visibility="invisible"
+        app:icon="@android:drawable/ic_popup_sync"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/right_arrow"
@@ -18,10 +48,6 @@
         android:contentDescription="b4"
         android:rotation="90"
         android:rotationX="0" />
-
-    <include
-        android:id="@+id/toolbar1"
-        layout="@layout/toolbar" />
 
     <Button
         android:id="@+id/start"
