--- a/app/src/main/res/layout/activity_scrnshare.xml
+++ b/app/src/main/res/layout/activity_scrnshare.xml
@@ -8,10 +8,11 @@
 <include
     android:id="@+id/tlbr"
     layout="@layout/toolbar"/>
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scaleType="fitCenter" />
 
 </LinearLayout>
