--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="custom_fab">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">@drawable/custom_fab</item>
+    </style>
 </resources>
