--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="end_color">#EAEAEA</color>
     <color name="max_blue">#30d9ef</color>
     <color name="min_blue">#96e8f3</color>
+    <color name="green">#06CF10</color>
+    <color name="brown">#800F0B</color>
 </resources>
