--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_marginEnd="115dp"
         android:layout_marginBottom="323dp"
         android:background="@drawable/button_mod"
+        android:focusable="true"
         app:icon="@drawable/ic_baseline_qr_code_scanner_24"
         app:iconSize="140dp"
         app:iconTint="#FFFEFE" />
